<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/layout_color">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <Button
            android:id="@+id/white"
            style="?android:attr/borderlessButtonStyle"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="100dp"
            android:layout_marginBottom="100dp"
            android:background="@drawable/btn_rounded5"
            android:minHeight="40dp"
            android:text="@string/white"
            android:textSize="17sp" />

        <Button
            android:id="@+id/black"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="100dp"
            android:background="@drawable/btn_rounded6"
            android:textColor="@color/black"
            android:text="@string/grey"
            android:textSize="17sp"
            android:minHeight="40dp"
            style="?android:attr/borderlessButtonStyle"/>

        <Button
            android:id="@+id/red"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="100dp"
            android:background="@drawable/btn_rounded7"
            android:text="@string/red"
            android:textSize="17sp"
            android:minHeight="40dp"
            style="?android:attr/borderlessButtonStyle"/>

        <Button
            android:id="@+id/blue"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="100dp"
            android:background="@drawable/btn_rounded71"
            android:text="@string/blue"
            android:textSize="17sp"
            android:minHeight="40dp"
            style="?android:attr/borderlessButtonStyle"/>


    </LinearLayout>


    <LinearLayout
        android:id="@+id/topBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        tools:ignore="MissingConstraints">

        <LinearLayout
            android:id="@+id/topBar2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/text_lines"
            android:orientation="horizontal"
            android:paddingTop="10dp"
            android:paddingBottom="5dp"
            tools:ignore="MissingConstraints">

            <ImageButton
                android:id="@+id/back"
                android:layout_width="30dp"
                android:layout_height="20dp"
                android:layout_gravity="center"
                android:layout_marginStart="4dp"
                android:layout_marginTop="4dp"
                android:layout_marginBottom="2dp"
                android:background="@null"
                android:contentDescription="@string/message"
                android:maxWidth="80dp"
                android:maxHeight="80dp"
                android:paddingBottom="2dp"
                android:scaleType="fitCenter"
                app:srcCompat="@drawable/back_arrow" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginStart="8dp"
                android:fontFamily="@font/grayson"
                android:paddingBottom="2dp"
                android:text="@string/layout_color"
                android:textSize="26sp" />

        </LinearLayout>
    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>