<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints,ScrollViewCount">

        <LinearLayout
            android:id="@+id/linMain"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="55dp"
                android:contentDescription="@string/message" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:orientation="vertical"
                android:paddingTop="25dp"
                android:paddingBottom="30dp"
                tools:ignore="MissingConstraints">

                <de.hdodenhof.circleimageview.CircleImageView
                    android:id="@+id/backImg"
                    android:layout_width="96dp"
                    android:layout_height="96dp"
                    android:src="@drawable/profile"
                    app:civ_border_width="1dp"
                    app:civ_border_color="#F00000"/>

                <TextView
                    android:id="@+id/choosePhoto"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingBottom="2dp"
                    android:text="@string/editPhoto"
                    android:textSize="26sp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:orientation="vertical"
                android:paddingBottom="5dp"
                tools:ignore="MissingConstraints">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingBottom="2dp"
                    android:text="@string/username"
                    android:textSize="24sp" />

                <EditText
                    android:id="@+id/username"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="30dp"
                    android:autofillHints=""
                    android:background="@drawable/text_lines"
                    android:hint="@string/exampleuser"
                    android:enabled="false"
                    android:inputType="text"
                    android:paddingBottom="2dp"
                    android:textSize="20sp"
                    tools:ignore="LabelFor,TextFields" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingBottom="2dp"
                    android:text="@string/editBio"
                    android:textSize="24sp" />

                <EditText
                    android:id="@+id/bio"
                    android:layout_width="match_parent"
                    android:layout_height="250dp"
                    android:layout_marginTop="15dp"
                    android:autofillHints=""
                    android:background="@drawable/box_aroud"
                    android:gravity="top|left"
                    android:paddingStart="5dp"
                    android:paddingEnd="5dp"
                    android:hint="@string/writeHere"
                    android:inputType="text|textMultiLine"
                    tools:ignore="LabelFor,RtlHardcoded" />

            </LinearLayout>

            <Button
                android:id="@+id/btn_submit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="40dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="40dp"
                android:background="@drawable/custom_btn"
                android:text="@string/submit"
                android:textColor="@android:color/white" />

            <TextView
                android:id="@+id/changeLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="end"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="10dp"
                android:layout_marginBottom="10dp"
                android:textSize="17sp"
                android:text="@string/layout_color" />

            <ImageButton
                android:layout_width="match_parent"
                android:layout_height="15dp"
                android:background="@null"
                android:contentDescription="@string/message" />

        </LinearLayout>
    </ScrollView>



    <LinearLayout
        android:id="@+id/topBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        tools:ignore="MissingConstraints">

        <LinearLayout
            android:id="@+id/topBar2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="5dp"
            android:background="@drawable/text_lines"
            android:orientation="horizontal"
            android:paddingBottom="5dp"
            tools:ignore="MissingConstraints">

            <ImageButton
                android:id="@+id/back"
                android:layout_width="30dp"
                android:layout_height="20dp"
                android:layout_gravity="center"
                android:layout_marginStart="4dp"
                android:layout_marginTop="4dp"
                android:layout_marginBottom="2dp"
                android:background="@null"
                android:contentDescription="@string/message"
                android:maxWidth="80dp"
                android:maxHeight="80dp"
                android:paddingBottom="2dp"
                android:scaleType="fitCenter"
                app:srcCompat="@drawable/back_arrow" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginStart="8dp"
                android:fontFamily="@font/grayson"
                android:paddingBottom="2dp"
                android:text="@string/editProfile"
                android:textSize="30sp" />

        </LinearLayout>
    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>