<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/info_background">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <Button
            android:id="@+id/help"
            style="?android:attr/borderlessButtonStyle"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="100dp"
            android:layout_marginBottom="100dp"
            android:background="@drawable/btn_rounded"
            android:text="@string/help"
            android:textSize="20sp" />

        <Button
            android:id="@+id/about"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="100dp"
            android:background="@drawable/btn_rounded2"
            android:text="@string/about"
            android:textSize="20sp"
            style="?android:attr/borderlessButtonStyle"/>

        <Button
            android:id="@+id/returne"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="100dp"
            android:background="@drawable/btn_rounded4"
            android:text="@string/returne"
            android:textSize="20sp"
            style="?android:attr/borderlessButtonStyle"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:orientation="horizontal"
        android:backgroundTint="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0">

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/text_lines"
            android:gravity="center"
            android:orientation="horizontal"
            tools:ignore="MissingConstraints">

            <TextView
                android:id="@+id/a"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"
                android:fontFamily="@font/frozito"
                android:gravity="center"
                android:text="@string/app_name"
                android:textSize="50sp" />


        </LinearLayout>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>